--- a/basic_pytorch_cloud.ipynb
+++ b/basic_pytorch_cloud.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpP6rKxZ5gadJ0a2lkt/hg",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyOd8QQUMKcmT+UI9YE4Kofb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -34,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nM87GsxNeaKB",
-        "outputId": "a992d25d-8049-40e7-e04d-686b54231d0d"
+        "outputId": "51765f36-8b3d-4a5b-d8c9-a4f87e666eec"
       },
       "outputs": [
         {
@@ -75,9 +77,74 @@
         "import pandas as pd\n",
         "# import time\n",
         "import warnings\n",
-        "warnings.filterwarnings(\"ignore\")\n",
+        "# warnings.filterwarnings(\"ignore\")\n",
         "import torch\n",
-        "print(torch.cuda.is_available())\n",
+        "print(torch.cuda.is_available())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CHRzY6Eif4Bw",
+        "outputId": "e5fe2889-329b-477a-cfbd-4630a22912f6"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "print(torch.cuda.get_device_name(0))\n",
+        "print(torch.cuda.device_count())\n",
+        "print(torch.cuda.current_device())\n",
+        "# print(torch.cuda.get_device_properties(0))\n",
+        "# print(torch.cuda.get_device_properties(1))\n",
+        "# print(torch.cuda.get_device_properties(2))\n",
+        "# print(torch.cuda.get_device_properties(3))\n",
+        "# print(torch.cuda.get_device_properties(4))\n",
+        "# print(torch.cuda.get_device_properties(5))\n",
+        "# print(torch.cuda.get_device_properties(6))\n",
+        "# print(torch.cuda.get_device_properties(7))\n",
+        "# print(torch.cuda.get_device_properties(8))\n",
+        "# print(torch.cuda.get_device_properties(9))\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "erqQqCb5ict2",
+        "outputId": "2accf1e1-6882-47c8-9b80-5569d9c35a5c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tesla T4\n",
+            "1\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
         "torch.manual_seed(42)\n",
         "print(torch.rand(2,2))\n",
         "\n",
@@ -125,8 +192,8 @@
         "from torchvision.transforms import ToTensor\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "training_data = datasets.MNIST(root=\".\", train=True, download=True, transform=ToTensor())\n",
-        "test_data = datasets.MNIST(root=\".\", train=False, download=True, transform=ToTensor())\n",
+        "# training_data = datasets.MNIST(root=\".\", train=True, download=True, transform=ToTensor())\n",
+        "# test_data = datasets.MNIST(root=\".\", train=False, download=True, transform=ToTensor())\n",
         "\n",
         "\n",
         "\n",
@@ -153,7 +220,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "CHRzY6Eif4Bw"
+        "id": "0VZeOUSliFsb"
       },
       "execution_count": null,
       "outputs": []
